--- a/contato.html
+++ b/contato.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +25,8 @@
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
-
 <body>
+
     <nav>
         <ul class="menu">
             <li>Home</li>
@@ -37,55 +36,17 @@
         </ul>
     </nav>
 
-
     <section>
         <input type="search" class="pesquisa">
     </section>
 
-    <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/976/thumbnails/m_976ca.jpg" 
-        class="imagem">
-        <div class="nomeProduto">
-            <h2>Agostinho dos Santos - LP Agostinho dos Santos</h2>
-            <span>R$115,44</span>
-        </div>
-    </article>
+    <div>
+        <h2>Nome</h2><input type="text" name="nome" id="">
+        <h2>E-mail</h2><input type="email" name="email" id="">
+        <h2>Contato</h2><input type="number" name="contato" id="">
+        <h2>Descrição</h2><input type="text" name="descricao" id="">
+    </div>
 
-    <input type="button" value="Comprar" class="comprar">
-
-    <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/1025/thumbnails/m_1025ca.jpg" 
-        class="imagem">
-        <div class="nomeProduto">
-            <h2>Alceu Valença - Anjo Avesso</h2>
-            <span>R$57,20</span>
-        </div>
-    </article>
-
-    <input type="button" value="Comprar" class="comprar">
-
-    <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/1025/thumbnails/m_1025ca.jpg" 
-        class="imagem">
-        <div class="nomeProduto">
-            <h2>Alceu Valença - Anjo Avesso</h2>
-            <span>R$57,20</span>
-        </div>
-    </article>
-
-    <input type="button" value="Comprar" class="comprar">
-
-    <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/1025/thumbnails/m_1025ca.jpg" 
-        class="imagem">
-        <div class="nomeProduto">
-            <h2>Alceu Valença - Anjo Avesso</h2>
-            <span>R$57,20</span>
-        </div>
-    </article>
-
-    <input type="button" value="Comprar" class="comprar">
-
+    <input type="button" value="Enviar">
 </body>
-
 </html>
