colocado ./ nos ícones

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <section>
         <input type="search" class="pesquisa">
     </section>
+    <input type="button" value="Buscar" class="buscar">
 
     <article class="produto">
         <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/976/thumbnails/m_976ca.jpg" 
