--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
     </nav>
 
 
-    <section>
+    <section class="secao-pesquisa">
         <input type="search" class="pesquisa">
+        <input type="button" value="Buscar" class="buscar">
     </section>
-    <input type="button" value="Buscar" class="buscar">
+    
 
     <article class="produto">
         <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/976/thumbnails/m_976ca.jpg" 
