--- a/pesquisar.html
+++ b/pesquisar.html
@@ -38,6 +38,7 @@
 
     <section>
         <input type="search" class="pesquisa">
+        <input type="button" value="Buscar" class="buscar">
     </section>
 
     <article class="produto">
