projeto ecommerce discos concluído

--- a/compra.html
+++ b/compra.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,9 +26,10 @@
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
 
-    <h1 class="titulo">Brazilian Beat</h1>
+    <h1 class="titulo">Brazilian Beats</h1>
 
     <nav>
         <ul class="menu">
@@ -38,23 +40,16 @@
         </ul>
     </nav>
 
-    <section>
+
+    <section class="secao-pesquisa">
         <input type="search" class="pesquisa">
         <a href="pesquisar.html">
-            <input type="button" value="Buscar" class="buscar">
+        <input type="button" value="Buscar" class="buscar">
         </a>
     </section>
 
-    <form class="formulario">
-        <label for="nome">Nome</label><input type="text" name="nome" id="nome">
-        <label>E-mail</label><input type="email" name="email" id="">
-        <label>Contato</label><input type="number" name="contato" id="">
-        <label>Descrição</label><textarea name="descricao" id="descricao" cols="30" rows="10"></textarea>
-
-        <input type="button" value="Enviar" class="enviar">
-    </form>
-
-    <script src="index.js"></script>
+    <h2 class="compraRealizada">Compra realizada com sucesso!</h2>
 
 </body>
+
 </html>
