--- a/index.html
+++ b/index.html
@@ -28,24 +28,29 @@
 </head>
 
 <body>
+
+    <h1 class="titulo">Brazilian Beat</h1>
+
     <nav>
         <ul class="menu">
-            <li>Home</li>
-            <li>Loja</li>
-            <li>Minha Conta</li>
-            <li>Contato</li>
+            <li><a href="index.html" class="link-menu">Home</a></li>
+            <li><a href="index.html" class="link-menu">Loja</a></li>
+            <li><a href="minhaconta.html">Minha Conta</a></li>
+            <li><a href="contato.html" class="link-menu">Contato</a></li>
         </ul>
     </nav>
 
 
     <section class="secao-pesquisa">
         <input type="search" class="pesquisa">
+        <a href="pesquisar.html">
         <input type="button" value="Buscar" class="buscar">
+        </a>
     </section>
     
 
     <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/976/thumbnails/m_976ca.jpg" 
+        <img src="./img/m_976ca.jpg" 
         class="imagem">
         <div class="nomeProduto">
             <h2>Agostinho dos Santos - LP Agostinho dos Santos</h2>
@@ -53,10 +58,12 @@
         </div>
     </article>
 
+    <a href="compra.html" class="tirarlinha">
     <input type="button" value="Comprar" class="comprar">
+    </a>
 
     <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/1025/thumbnails/m_1025ca.jpg" 
+        <img src="./img/m_1025ca.jpg" 
         class="imagem">
         <div class="nomeProduto">
             <h2>Alceu Valença - Anjo Avesso</h2>
@@ -64,29 +71,35 @@
         </div>
     </article>
 
+    <a href="compra.html" class="tirarlinha">
     <input type="button" value="Comprar" class="comprar">
+    </a>
 
     <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/1025/thumbnails/m_1025ca.jpg" 
+        <img src="./img/R-7338706-1464893930-8894.jpeg-300x300.jpg" 
         class="imagem">
         <div class="nomeProduto">
-            <h2>Alceu Valença - Anjo Avesso</h2>
+            <h2>Adauto Santos – O Sucesso Da Noite Para O Dia</h2>
+            <span>R$102,44</span>
+        </div>
+    </article>
+
+    <a href="compra.html" class="tirarlinha">
+    <input type="button" value="Comprar" class="comprar">
+    </a>
+
+    <article class="produto">
+        <img src="./img/Feliz-Da-Vida.jpg" 
+        class="imagem">
+        <div class="nomeProduto">
+            <h2>Agepê ‎– Feliz Da Vida</h2>
             <span>R$57,20</span>
         </div>
     </article>
 
+    <a href="compra.html" class="tirarlinha">
     <input type="button" value="Comprar" class="comprar">
-
-    <article class="produto">
-        <img src="https://immub-space.nyc3.digitaloceanspaces.com/capas/1025/thumbnails/m_1025ca.jpg" 
-        class="imagem">
-        <div class="nomeProduto">
-            <h2>Alceu Valença - Anjo Avesso</h2>
-            <span>R$57,20</span>
-        </div>
-    </article>
-
-    <input type="button" value="Comprar" class="comprar">
+    </a>
 
     <script src="index.js"></script>
 
