--- a/minhaconta.html
+++ b/minhaconta.html
@@ -47,10 +47,8 @@
 
     <form class="formulario">
         <label for="nome">Nome</label><input type="text" name="nome" id="nome">
-        <label>E-mail</label><input type="email" name="email" id="">
-        <label>Contato</label><input type="number" name="contato" id="">
-        <label>Descrição</label><textarea name="descricao" id="descricao" cols="30" rows="10"></textarea>
-
+        <label>E-mail</label><input type="email" name="email" id="email">
+        <label>Contato</label><input type="number" name="contato" id="contato">
         <input type="button" value="Enviar" class="enviar">
     </form>
 
