arrumado a classe no menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="menu">
             <li><a href="index.html" class="link-menu">Home</a></li>
             <li><a href="index.html" class="link-menu">Loja</a></li>
-            <li><a href="minhaconta.html">Minha Conta</a></li>
+            <li><a href="minhaconta.html" class="link-menu">Minha Conta</a></li>
             <li><a href="contato.html" class="link-menu">Contato</a></li>
         </ul>
     </nav>
